WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262475
Element application crashes in WebCore::Path::isEmpty()
https://bugs.webkit.org/show_bug.cgi?id=262475
Summary
Element application crashes in WebCore::Path::isEmpty()
Carlos Garcia Campos
Reported
2023-10-02 02:26:59 PDT
This is because LegacyRenderSVGPath::isRenderingDisabled() is calling Path::isEmpty when it doesn't have a path. I'm not sure it's expected or not, but just checking it first fixes the issue.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2023-10-02 02:29:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18490
Radar WebKit Bug Importer
Comment 2
2023-10-09 02:27:13 PDT
<
rdar://problem/116668965
>
EWS
Comment 3
2023-10-11 14:57:54 PDT
Committed
269223@main
(5ce1ab0db72b): <
https://commits.webkit.org/269223@main
> Reviewed commits have been landed. Closing PR #18490 and removing active labels.
Simon Fraser (smfr)
Comment 4
2023-10-11 15:21:44 PDT
This crash was also seen on bing.com after
268313@main
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug