Cherry-pick 5ce1ab0db72b. rdar://116839703

Element application crashes in WebCore::Path::isEmpty()
    https://bugs.webkit.org/show_bug.cgi?id=262475

    Reviewed by Said Abou-Hallawa.

    Check hasPath() before calling path().

    * Source/WebCore/rendering/svg/RenderSVGPath.cpp:
    (WebCore::RenderSVGPath::isRenderingDisabled const):
    * Source/WebCore/rendering/svg/legacy/LegacyRenderSVGPath.cpp:
    (WebCore::LegacyRenderSVGPath::isRenderingDisabled const):

    Canonical link: https://commits.webkit.org/269223@main

Canonical link: https://commits.webkit.org/267815.281@safari-7617-branch